--- a/vue-practice/index.html
+++ b/vue-practice/index.html
@@ -35,6 +35,16 @@
 		<li><a href="../example/propsData.html">propsData Option</a></li>
 		<li><a href="../example/computed.html">computed Option</a></li>
 		<li><a href="../example/methods.html">methods Option</a></li>
+		<li><a href="../example/watch.html">watch Option</a></li>
+		<li><a href="../example/mixins.html">mixins Option</a></li>
+		<li><a href="../example/extends.html">extends Option</a></li>
+	</ol>
+	<h2>第四季：Vue实例和内置组件</h2>
+	<ol>
+		<li><a href="../example/example-1.html">example methods</a></li>
+		<li><a href="../example/example-2.html">example methods</a></li>
+		<li><a href="../example/example-3.html">example methods</a></li>
+		<li><a href="../example/example-4.html">example methods</a></li>
 	</ol>
 </body>
 </html>
